--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
         
         <br>
 
-[columbia-logo.png]
+
+        <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
 
 COLUMBIARECORDS.COM
 
