Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 
 COLUMBIARECORDS.COM
 
-[sony-logo.png]
+
+        <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->[sony-logo.png]
   </body>
 </html>
