--- a/index.html
+++ b/index.html
@@ -61,16 +61,18 @@
         <!-- Level 3 '| FROM DESPICABLE ME 2 |' Header -->
         <!-- span text 'PUBLISHED BY EMI APRIL MUSIC, INC. OBO ITSELF AND MORE WATERFROM NAZARETH (ASCAP) / UNIVERSAL PICTURES MUSIC (ASCAP) | BACKGROUND VOCALS PERFORMED BY RHEA DUMMETT, TREVON HENDERSON, ASHLEY L. LEE, SHAMIKA HIGHTOWER, JASMINE MURRAY AND TERRENCE ROLLE | PRODUCED BY PHARRELL WILLIAMS | RECORDED BY MIKE LARSON FOR I AM OTHER ENTERTAINMENT AT CIRCLE HOUSE STUDIOS, MIAMI, FL | ASSISTED BY MATTHEW DESRAMEAUX | DIGITAL EDITING AND ARRANGEMENT BY ANDREW COLEMAN AND MIKE LARSON FOR I AM OTHER ENTERTAINMENT | MIXED BY LESLIE BRATHWAITE AT MUSIC BOX STUDIOS, ATLANTA, GA.' -->
 
-        <!-- span textPHARRELLWILLIAMS.COM' -->
+        <!-- span text 'PHARRELLWILLIAMS.COM' -->
         
         <br>
 
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
+        
+        <br>
 
-COLUMBIARECORDS.COM
+        <!-- span text 'PHARRELLWILLIAMS.COM' -->COLUMBIARECORDS.COM
 
 
-        <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->[sony-logo.png]
+        <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
   </body>
 </html>
