Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -46,10 +46,8 @@
         <!-- Level 1 'HAPPY' Header -->
 
         <!-- Level 3 '| FROM DESPICABLE ME 2 |' Header -->
-        </div>
-      </div>
 
-      <div id="back" class="album">
+
         
       <div id="front" class="album">
         <div id="title-box">
@@ -70,9 +68,13 @@
         
         <br>
 
-        <!-- span text 'PHARRELLWILLIAMS.COM' -->COLUMBIARECORDS.COM
+        <!-- span text 'COLUMBIARECORDS.COM' -->
 
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
+        </div>
+      </div>
+
+      <div id="back" class="album">
   </body>
 </html>
