--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
         <h3>| FROM DESPICABLE ME...</h3>
 
-        <h1>Level 1 'HAPPY</h1>
+        <h1>HAPPY</h1>
 
-        <!-- Level 3 'WRITTEN BY...' Header -->
+        <h3>WRITTEN BY PHARRELL WILLIAMS</h3>
 
         <!-- span text 'PHARRELLWILLIAMS.COM' -->
 
