Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <h3>WRITTEN BY PHARRELL WILLIAMS</h3>
 
-        <!-- span text 'PHARRELLWILLIAMS.COM' -->
+        <span></span>PHARRELLWILLIAMS.COM' -->
 
         <!-- span text 'COLUMBIARECORDS.COM' -->
 
