Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 
         <h3>WRITTEN BY PHARRELL WILLIAMS</h3>
 
-        <span></span>PHARRELLWILLIAMS.COM' -->
+        <span>PHARRELLWILLIAMS.COM</span>
 
-        <!-- span text 'COLUMBIARECORDS.COM' -->
+        <span></span>COLUMBIARECORDS.COM' -->
 
         <br>
 
