Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <span>PHARRELLWILLIAMS.COM</span>
 
-        <span></span>COLUMBIARECORDS.COM' -->
+        <span>COLUMBIARECORDS.COM</span>
 
         <br>
 
