--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
       </div>
 
       <div id="back" class="album">
+        
+      <div id="front" class="album">
+        <div id="title-box">
 
         <h3>| FROM DESPICABLE ME...</h3>
 
@@ -37,7 +40,7 @@
 
     
 
-        <img src="https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
+        <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png" alt="Columbia logo">
         </div>
       </div>
 
